[package]
name = "project-r"
version = "0.1.0"
authors = ["OjaswinM <ojaswin@hotmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.8.0"
spin = "0.5.2"
x86_64 = "0.11.0"
pic8259_simple = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
